--- a/src/App.css
+++ b/src/App.css
@@ -174,10 +174,6 @@ h6 {
     @media (min-width: 576px) {
       .slogan__icons {
         height: 64px; } }
-    @media (max-width: 575px) {
-      .slogan__icons.is-active .slogan__link:not(.is-active) {
-        max-width: 0;
-        opacity: 0; } }
   .slogan__link {
     position: relative;
     display: flex;
@@ -214,6 +210,19 @@ h6 {
           background-color: #717c80; }
         .slogan__link:focus::after {
           display: block; } }
+    @media (max-width: 575px) {
+      .slogan__link:not(.is-active) {
+        max-width: 0;
+        opacity: 0; } }
+    .slogan__link.is-active .slogan__icon {
+      box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
+      .slogan__link.is-active .slogan__icon svg {
+        fill: #fff !important; }
+      @media (min-width: 576px) {
+        .slogan__link.is-active .slogan__icon {
+          box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
+    .slogan__link.is-active .slogan__title {
+      max-width: 20em; }
   .slogan li {
     white-space: nowrap;
     pointer-events: none; }
@@ -255,13 +264,6 @@ h6 {
         border-radius: 32px;
         box-shadow: inset 0 0 0 4px #232729, 0 0 0 2px #717c80;
         box-shadow: inset 0 0 0 4px var(--background), 0 0 0 2px #717c80; } }
-    .slogan__icon.is-active {
-      box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
-      .slogan__icon.is-active svg {
-        fill: #fff !important; }
-      @media (min-width: 576px) {
-        .slogan__icon.is-active {
-          box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
     .slogan__icon svg {
       position: absolute;
       top: 0;
@@ -289,8 +291,6 @@ h6 {
         padding-left: 10px;
         transition: max-width 1s ease-out;
         line-height: 64px; } }
-    .slogan__title.is-active {
-      max-width: 20em; }
   .slogan h1 {
     margin-top: 0;
     margin-bottom: 0;
