--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Coustard|Roboto:300");
-*, *::before, *::after {
-  box-sizing: border-box; }
-
-html,
-body {
-  margin: 0;
-  padding: 0; }
-
-html {
-  line-height: 1.15; }
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
-  font-weight: 300; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Coustard', sans-serif;
-  font-weight: 400; }
-
-h1 {
-  font-size: 2.5rem; }
-
-h2 {
-  font-size: 2rem; }
-
-h3 {
-  font-size: 1.75rem; }
-
-h4 {
-  font-size: 1.5rem; }
-
-h5 {
-  font-size: 1.25rem; }
-
-h6 {
-  font-size: 1rem; }
-
 @keyframes blink {
   0% {
     opacity: 1; }
@@ -105,6 +62,49 @@ h6 {
   background-color: rgba(0, 0, 0, 0.2);
   background-color: var(--selection-background-color); }
 
+*, *::before, *::after {
+  box-sizing: border-box; }
+
+html,
+body {
+  margin: 0;
+  padding: 0; }
+
+html {
+  line-height: 1.15; }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  font-weight: 300; }
+
+h1 {
+  font-size: 2.5rem; }
+
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.75rem; }
+
+h4 {
+  font-size: 1.5rem; }
+
+h5 {
+  font-size: 1.25rem; }
+
+h6 {
+  font-size: 1rem; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Coustard', sans-serif;
+  font-weight: 400; }
+
 .app {
   position: relative;
   overflow: hidden;
@@ -160,91 +160,56 @@ h6 {
   to {
     transform: scale(0.9); } }
 
-.slogan {
-  max-width: 100vw;
-  padding: 0 15px;
-  text-align: center; }
-  .slogan__icons {
-    display: flex;
-    height: 36px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    justify-content: center; }
+.icon-link {
+  position: relative;
+  display: flex;
+  max-width: 20em;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  transition: opacity 0.5s, max-width 0.2s;
+  white-space: nowrap;
+  text-decoration: none;
+  text-transform: none;
+  opacity: 1;
+  color: #717c80;
+  outline: none;
+  font-size: 1.5rem; }
+  @media (min-width: 576px) {
+    .icon-link {
+      margin-right: 2px;
+      padding-right: 2px; }
+      .icon-link::after {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        display: none;
+        box-sizing: content-box;
+        width: 100%;
+        height: 100%;
+        margin-top: -2px;
+        margin-left: 1px;
+        padding: 2px 0 2px 4px;
+        content: '';
+        opacity: 0.2;
+        border-radius: 64px;
+        background-color: #717c80; }
+      .icon-link:focus::after {
+        display: block; } }
+  @media (max-width: 575px) {
+    .icon-link:not(.is-active) {
+      max-width: 0;
+      opacity: 0; } }
+  .icon-link.is-active .icon-link__icon {
+    box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
+    .icon-link.is-active .icon-link__icon svg {
+      fill: #fff !important; }
     @media (min-width: 576px) {
-      .slogan__icons {
-        height: 64px; } }
-  .slogan__link {
-    position: relative;
-    display: flex;
-    max-width: 20em;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    transition: opacity 0.5s, max-width 0.2s;
-    white-space: nowrap;
-    text-decoration: none;
-    text-transform: none;
-    opacity: 1;
-    color: #717c80;
-    outline: none;
-    font-size: 1.5rem; }
-    @media (min-width: 576px) {
-      .slogan__link {
-        margin-right: 2px;
-        padding-right: 2px; }
-        .slogan__link::after {
-          position: absolute;
-          z-index: -1;
-          top: 0;
-          left: 0;
-          display: none;
-          box-sizing: content-box;
-          width: 100%;
-          height: 100%;
-          margin-top: -2px;
-          margin-left: 1px;
-          padding: 2px 0 2px 4px;
-          content: '';
-          opacity: 0.2;
-          border-radius: 64px;
-          background-color: #717c80; }
-        .slogan__link:focus::after {
-          display: block; } }
-    @media (max-width: 575px) {
-      .slogan__link:not(.is-active) {
-        max-width: 0;
-        opacity: 0; } }
-    .slogan__link.is-active .slogan__icon {
-      box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
-      .slogan__link.is-active .slogan__icon svg {
-        fill: #fff !important; }
-      @media (min-width: 576px) {
-        .slogan__link.is-active .slogan__icon {
-          box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
-    .slogan__link.is-active .slogan__title {
-      max-width: 20em; }
-  .slogan li {
-    white-space: nowrap;
-    pointer-events: none; }
-    .slogan li.start-animation {
-      transform: scale(0.7);
-      animation: scaleToSize 1s forwards;
-      pointer-events: all; }
-      .slogan li.start-animation:nth-child(1) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.1s forwards; }
-      .slogan li.start-animation:nth-child(2) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.2s forwards; }
-      .slogan li.start-animation:nth-child(3) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.3s forwards; }
-      .slogan li.start-animation:nth-child(4) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.4s forwards; }
-      .slogan li.start-animation:nth-child(5) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.5s forwards; }
-      .slogan li.start-animation:nth-child(6) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.6s forwards; }
-      .slogan li.start-animation:nth-child(7) .slogan__icon {
-        animation: fadeInSlide 0.5s 0.7s forwards; }
-  .slogan__icon {
+      .icon-link.is-active .icon-link__icon {
+        box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
+  .icon-link.is-active .icon-link__title {
+    max-width: 20em; }
+  .icon-link__icon {
     position: relative;
     display: block;
     width: 36px;
@@ -257,14 +222,14 @@ h6 {
     box-shadow: inset 0 0 0 2px #232729, 0 0 0 1px #717c80;
     box-shadow: inset 0 0 0 2px var(--background), 0 0 0 1px #717c80; }
     @media (min-width: 576px) {
-      .slogan__icon {
+      .icon-link__icon {
         width: 64px;
         height: 64px;
         margin-left: 10px;
         border-radius: 32px;
         box-shadow: inset 0 0 0 4px #232729, 0 0 0 2px #717c80;
         box-shadow: inset 0 0 0 4px var(--background), 0 0 0 2px #717c80; } }
-    .slogan__icon svg {
+    .icon-link__icon svg {
       position: absolute;
       top: 0;
       left: 0;
@@ -277,9 +242,9 @@ h6 {
       fill: #232729;
       fill: var(--background); }
       @media (min-width: 576px) {
-        .slogan__icon svg {
+        .icon-link__icon svg {
           padding: 16px; } }
-  .slogan__title {
+  .icon-link__title {
     display: inline-block;
     overflow: hidden;
     max-width: 0;
@@ -287,40 +252,10 @@ h6 {
     transition: max-width 0.7s 0.2s ease-out;
     line-height: 36px; }
     @media (min-width: 576px) {
-      .slogan__title {
+      .icon-link__title {
         padding-left: 10px;
         transition: max-width 1s ease-out;
         line-height: 64px; } }
-  .slogan h1 {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 2.3rem; }
-    @media (min-width: 992px) {
-      .slogan h1 {
-        font-size: 4rem; } }
-  .slogan p {
-    margin-top: 0.75em;
-    margin-bottom: 2rem;
-    text-transform: uppercase;
-    font-size: 1.15rem; }
-    @media (min-width: 992px) {
-      .slogan p {
-        font-size: 1.75rem; } }
-  .slogan__delayed-subtitle {
-    white-space: nowrap;
-    opacity: 0; }
-    .slogan__delayed-subtitle.start-animation {
-      animation: fadeInSlide 2s forwards;
-      white-space: normal; }
-
-.typed-cursor {
-  animation: blink 0.7s 2s forwards;
-  opacity: 1; }
-
-.slogan-heading + .typed-cursor {
-  animation: blinkToHidden 0.7s 2s 3 forwards;
-  animation-iteration-count: 3 !important;
-  opacity: 1; }
 
 .repository-link {
   position: relative;
@@ -389,3 +324,69 @@ h6 {
     top: 0;
     left: 0;
     visibility: hidden; }
+
+.home {
+  max-width: 100vw;
+  padding: 0 15px;
+  text-align: center; }
+  .home__icons {
+    display: flex;
+    height: 36px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    justify-content: center; }
+    @media (min-width: 576px) {
+      .home__icons {
+        height: 64px; } }
+  .home li {
+    white-space: nowrap;
+    pointer-events: none; }
+    .home li.start-animation {
+      transform: scale(0.7);
+      animation: scaleToSize 1s forwards;
+      pointer-events: all; }
+      .home li.start-animation:nth-child(1) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.1s forwards; }
+      .home li.start-animation:nth-child(2) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.2s forwards; }
+      .home li.start-animation:nth-child(3) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.3s forwards; }
+      .home li.start-animation:nth-child(4) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.4s forwards; }
+      .home li.start-animation:nth-child(5) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.5s forwards; }
+      .home li.start-animation:nth-child(6) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.6s forwards; }
+      .home li.start-animation:nth-child(7) .icon-link__icon {
+        animation: fadeInSlide 0.5s 0.7s forwards; }
+  .home h1 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 2.3rem; }
+    @media (min-width: 992px) {
+      .home h1 {
+        font-size: 4rem; } }
+  .home p {
+    margin-top: 0.75em;
+    margin-bottom: 2rem;
+    text-transform: uppercase;
+    font-size: 1.15rem; }
+    @media (min-width: 992px) {
+      .home p {
+        font-size: 1.75rem; } }
+  .home__delayed-subtitle {
+    white-space: nowrap;
+    opacity: 0; }
+    .home__delayed-subtitle.start-animation {
+      animation: fadeInSlide 2s forwards;
+      white-space: normal; }
+
+.typed-cursor {
+  animation: blink 0.7s 2s forwards;
+  opacity: 1; }
+
+.home-heading + .typed-cursor {
+  animation: blinkToHidden 0.7s 2s 3 forwards;
+  animation-iteration-count: 3 !important;
+  opacity: 1; }
