--- a/src/App.css
+++ b/src/App.css
@@ -196,10 +196,6 @@ h6 {
         background-color: #717c80; }
       .icon-link:focus::after {
         display: block; } }
-  @media (max-width: 575px) {
-    .icon-link:not(.is-active) {
-      max-width: 0;
-      opacity: 0; } }
   .icon-link.is-active .icon-link__icon {
     box-shadow: inset 0 0 0 3px #fff, 0 0 0 2px #717c80; }
     .icon-link.is-active .icon-link__icon svg {
@@ -208,7 +204,7 @@ h6 {
       .icon-link.is-active .icon-link__icon {
         box-shadow: inset 0 0 0 6px #fff, 0 0 0 4px #717c80; } }
   .icon-link.is-active .icon-link__title {
-    max-width: 20em; }
+    max-width: 20ch; }
   .icon-link__icon {
     position: relative;
     display: block;
@@ -336,6 +332,10 @@ h6 {
     padding: 0;
     list-style: none;
     justify-content: center; }
+    @media (max-width: 575px) {
+      .home__icons.is-animated .icon-link:not(.is-active) {
+        max-width: 0;
+        opacity: 0; } }
     @media (min-width: 576px) {
       .home__icons {
         height: 64px; } }
