--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -4,48 +4,9 @@
   background-color: var(--selection-background-color); // sass-lint:disable-line no-duplicate-properties
 }
 
-// Required CSS resets.
-* {
-  &,
-  &::before,
-  &::after {
-    box-sizing: border-box;
-  }
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-html { line-height: 1.15; }
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
-  font-weight: 300;
-}
-
-h1 { font-size: 2.5rem; }
-h2 { font-size: 2rem; }
-h3 { font-size: 1.75rem; }
-h4 { font-size: 1.5rem; }
-h5 { font-size: 1.25rem; }
-h6 { font-size: 1rem; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Coustard', sans-serif;
-  font-weight: 400;
-}
-
 .app {
   position: relative;
+  display: block;
   overflow: hidden;
   height: 100vh;
   transition: $transition-default;
