--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -1,9 +1,9 @@
 html { line-height: 1.15; }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 h1 { font-size: 2.5rem; }
@@ -19,6 +19,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Coustard', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
