--- a/src/assets/scss/components/_icon-link.scss
+++ b/src/assets/scss/components/_icon-link.scss
@@ -9,7 +9,7 @@
   text-decoration: none;
   text-transform: none;
   opacity: 1;
-  color: $text-color;
+  color: var(--text-color);
   outline: none;
   font-size: 1.5rem;
 
@@ -30,9 +30,9 @@
       margin-left: 1px;
       padding: 2px 0 2px 4px;
       content: '';
-      opacity: 0.2;
+      opacity: 0.1;
       border-radius: $slogan-icon-md;
-      background-color: $text-color;
+      background-color: var(--text-color);
     }
 
     &:focus {
@@ -44,14 +44,14 @@
 
   &.is-active {
     .icon-link__icon {
-      box-shadow: inset 0 0 0 ($slogan-icon-box-shadow-outer-sm * 1.5) $white, 0 0 0 ($slogan-icon-box-shadow-outer-sm) $slogan-icon-bg;
+      box-shadow: inset 0 0 0 ($slogan-icon-box-shadow-outer-sm * 1.5) $white, 0 0 0 ($slogan-icon-box-shadow-outer-sm) var(--text-color);
 
       svg {
-        fill: $white !important; // sass-lint:disable-line no-important
+        fill: $accent !important; // sass-lint:disable-line no-important
       }
 
       @media (min-width: $screen-md-min) {
-        box-shadow: inset 0 0 0 ($slogan-icon-box-shadow-outer-md * 1.5) $white, 0 0 0 ($slogan-icon-box-shadow-outer-md) $slogan-icon-bg;
+        box-shadow: inset 0 0 0 ($slogan-icon-box-shadow-outer-md * 1.5) $accent, 0 0 0 ($slogan-icon-box-shadow-outer-md) var(--text-color);
       }
     }
 
@@ -69,18 +69,16 @@
     transition: $transition-default;
     opacity: 0;
     border-radius: $slogan-icon-border-radius-sm;
-    background-color: $slogan-icon-bg;
+    background-color: var(--text-color);
 
-    box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-sm $background, 0 0 0 ($slogan-icon-box-shadow-outer-sm / 2) $slogan-icon-bg;
-    box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-sm var(--background), 0 0 0 ($slogan-icon-box-shadow-outer-sm / 2) $slogan-icon-bg; // sass-lint:disable-line no-duplicate-properties
+    box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-sm var(--background), 0 0 0 ($slogan-icon-box-shadow-outer-sm / 2) var(--text-color);
 
     @media (min-width: $screen-md-min) {
       width: $slogan-icon-md;
       height: $slogan-icon-md;
       margin-left: 10px;
       border-radius: $slogan-icon-border-radius-md;
-      box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-md $background, 0 0 0 ($slogan-icon-box-shadow-outer-md / 2) $slogan-icon-bg;
-      box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-md var(--background), 0 0 0 ($slogan-icon-box-shadow-outer-md / 2) $slogan-icon-bg; // sass-lint:disable-line no-duplicate-properties
+      box-shadow: inset 0 0 0 $slogan-icon-box-shadow-outer-md var(--background), 0 0 0 ($slogan-icon-box-shadow-outer-md / 2) var(--text-color);
     }
 
     svg {
@@ -93,8 +91,7 @@
       max-height: 100%;
       padding: $slogan-icon-padding-sm;
       transition: $transition-default;
-      fill: $background;
-      fill: var(--background); // sass-lint:disable-line no-duplicate-properties
+      fill: var(--background);
 
       @media (min-width: $screen-md-min) {
         padding: $slogan-icon-padding-md;
